assets/css/style.css
/* #region common */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root{
    --zapp-primary-top:rgba(234, 234, 234, 1);
    --zapp-primary-bottom:rgba(243, 238, 234, 1);
    --zapp-notifications:rgba(142, 218, 252, 1);
    --zapp-icons-light:rgba(177, 177, 177, 1);
    --zapp-icons-dark:rgba(107, 115, 118, 1);
    --zapp-bg-message:rgba(213, 249, 186, 1);
    --zapp-light:rgba(255, 255, 255, 1);
    --zapp-bg-big:rgba(218, 219, 212, 1);
    --zapp-bg-small:rgba(0, 150, 136, 1);
}
body{
    height: 100vh;
    background-color: var(--zapp-bg-big);
}
/* #endregion common */

/* #region utilities */
.container{
    width: 90%;
    margin: auto;
    margin-top: 1rem;
    height: 90%;
    background-color: aqua;
}
.d-flex{
    display: flex;
}
.row{
    display: flex;
    width: 100%;
}
.col-4{
    width: calc((100% / 12) * 4);
}
.col-8{
    width: calc((100% / 12) * 8);
}
.col-12{
    width: 100%;
}
/* #endregion utilities */

/* #region sidebar */
.sidebar{
    background-color: bisque;
    height: 100%;
}
/* #region side_nav */
.side_nav{
    background-color: aliceblue;
    height: 50px;
}
/* #endregion side_nav */

/* #region notification */
.notification{
background-color: beige;
height: 65px;
}
/* #endregion notification */

/* #region searchbar */
.searchbar{
    background-color: antiquewhite;
    height: 40px;
}
/* #endregion searchbar */

/* #region contacts */
.contact_list{
    height: 100%;
    overflow-y: auto;
}
.contact{
    background-color: blue;
    border: 2px solid black;
    height: 65px;
}
/* #endregion contacts */

/* #endregion sidebar */

/* #region main_app */
.main_app{
    background-color: brown;
    height: 100%;
}
/* #endregion main_app */

@media screen and (max-width:991px) {
    
}

@media screen and (max-width:540px) {
    
}

